--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,7 +20,8 @@
     "planFeatures": "Plan Features",
     "pricingPlans": "Pricing Plans", 
     "partnerContracts": "Partner Contracts",
-    "discountCodes": "Discount Codes"
+    "discountCodes": "Discount Codes",
+    "support": "Support"
   },
   "customers": {
     "title": "Customers",
@@ -355,7 +356,26 @@
     "newContractDesc": "Purchase a new package or subscription",
     "checkingProfile": "Checking profile...",
     "welcomeMessage": "Welcome!",
-    "profileCompletionRequired": "Please complete your profile to continue."
+    "profileCompletionRequired": "Please complete your profile to continue.",
+    "criticalAlerts": "Critical Business Alerts",
+    "expiringContracts": "Expiring Contracts",
+    "contractsNeedingAttention": "Contracts requiring renewal attention",
+    "next7Days": "Next 7 Days",
+    "next15Days": "Next 15 Days", 
+    "next30Days": "Next 30 Days",
+    "revenueAtRisk": "Revenue at Risk",
+    "paymentStatus": "Payment Status",
+    "paymentHealthCheck": "Outstanding and overdue payments",
+    "overduePayments": "Overdue",
+    "dueThisWeek": "Due This Week",
+    "dueThisMonth": "Due This Month",
+    "totalOverdue": "Total Overdue",
+    "financialOverview": "Financial Overview",
+    "monthlyRecurringRevenue": "Monthly Recurring Revenue",
+    "totalActiveValue": "Total Active Contract Value", 
+    "monthOverMonthGrowth": "Month-over-Month Growth",
+    "packageUtilization": "Package Utilization",
+    "customerUsagePatterns": "Customer usage patterns and entry consumption"
   },
   "partners": {
     "title": "Partners",
@@ -1497,6 +1517,45 @@
     "percentageHelp": "Enter percentage (0-100)",
     "fixedAmountHelp": "Enter fixed amount in USD",
     "usageLimitHelp": "Leave empty for unlimited usage"
+  },
+  "support": {
+    "title": "Support & Contact",
+    "subtitle": "We're here to help you succeed with our platform",
+    "companyInformation": "Company Information",
+    "companyName": "MLM Media Logistic Management GmbH",
+    "address": "Address",
+    "companyAddress": "Industriepark 11",
+    "phone": "Phone",
+    "phoneNumber": "+49 123 456 789",
+    "email": "Email",
+    "mainEmail": "info@mlm-media.com",
+    "businessHours": "Business Hours",
+    "mondayFriday": "Monday - Friday: 9:00 AM - 6:00 PM (CET)",
+    "saturday": "Saturday: 10:00 AM - 2:00 PM (CET)",
+    "sunday": "Sunday: Closed",
+    "clickToCopy": "Click to copy",
+    "clickToCopyEmail": "Click to copy email",
+    "clickToCopyEmergencyNumber": "Click to copy emergency number",
+    "copied": "Copied!",
+    "howCanWeHelp": "How can we help you?",
+    "technicalSupport": "Technical Support",
+    "technicalSupportDescription": "Get help with platform issues, bugs, or technical questions",
+    "accountBilling": "Account & Billing",
+    "accountBillingDescription": "Questions about your account, billing, or subscription",
+    "generalInquiries": "General Inquiries",
+    "generalInquiriesDescription": "General questions, feedback, or partnership opportunities",
+    "documentation": "Documentation",
+    "documentationDescription": "Access guides, API documentation, and help resources",
+    "highPriority": "High Priority",
+    "mediumPriority": "Medium Priority",
+    "standardPriority": "Standard Priority",
+    "selfServicePriority": "Self-service Priority",
+    "emergencySupport": "Emergency Support",
+    "emergencyDescription": "For urgent technical issues that affect your business operations:",
+    "emergencyNumber": "+49 123 456 999",
+    "available24x7": "Available 24/7 for critical issues",
+    "note": "Note:",
+    "emergencyNote": "Emergency support is reserved for critical system outages or security incidents that severely impact your business operations."
   },
   "app": {
     "appName": "Coworking Management",
