--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -20,7 +20,8 @@
     "planFeatures": "Funzionalità Piani",
     "pricingPlans": "Piani Tariffari",
     "partnerContracts": "Contratti Partner",
-    "discountCodes": "Codici Sconto"
+    "discountCodes": "Codici Sconto",
+    "support": "Supporto"
   },
   "customers": {
     "title": "Clienti",
@@ -355,7 +356,26 @@
     "newContractDesc": "Acquista un nuovo pacchetto o abbonamento",
     "checkingProfile": "Controllo profilo...",
     "welcomeMessage": "Benvenuto!",
-    "profileCompletionRequired": "Completa il tuo profilo per continuare."
+    "profileCompletionRequired": "Completa il tuo profilo per continuare.",
+    "criticalAlerts": "Avvisi Business Critici",
+    "expiringContracts": "Contratti in Scadenza",
+    "contractsNeedingAttention": "Contratti che richiedono attenzione per il rinnovo",
+    "next7Days": "Prossimi 7 Giorni",
+    "next15Days": "Prossimi 15 Giorni",
+    "next30Days": "Prossimi 30 Giorni", 
+    "revenueAtRisk": "Fatturato a Rischio",
+    "paymentStatus": "Stato Pagamenti",
+    "paymentHealthCheck": "Pagamenti in sospeso e scaduti",
+    "overduePayments": "Scaduti",
+    "dueThisWeek": "In Scadenza Questa Settimana",
+    "dueThisMonth": "In Scadenza Questo Mese",
+    "totalOverdue": "Totale Scaduto",
+    "financialOverview": "Panoramica Finanziaria",
+    "monthlyRecurringRevenue": "Fatturato Ricorrente Mensile",
+    "totalActiveValue": "Valore Totale Contratti Attivi",
+    "monthOverMonthGrowth": "Crescita Mese su Mese",
+    "packageUtilization": "Utilizzo Pacchetti",
+    "customerUsagePatterns": "Pattern di utilizzo clienti e consumo ingressi"
   },
   "partners": {
     "title": "Partner",
@@ -1498,6 +1518,45 @@
     "percentageHelp": "Inserisci percentuale (0-100)",
     "fixedAmountHelp": "Inserisci importo fisso in USD",
     "usageLimitHelp": "Lascia vuoto per utilizzo illimitato"
+  },
+  "support": {
+    "title": "Supporto e Contatti",
+    "subtitle": "Siamo qui per aiutarti ad avere successo con la nostra piattaforma",
+    "companyInformation": "Informazioni Aziendali",
+    "companyName": "MLM Media Logistic Management GmbH",
+    "address": "Indirizzo",
+    "companyAddress": "Industriepark 11",
+    "phone": "Telefono",
+    "phoneNumber": "+49 123 456 789",
+    "email": "Email",
+    "mainEmail": "info@mlm-media.com",
+    "businessHours": "Orari di Ufficio",
+    "mondayFriday": "Lunedì - Venerdì: 9:00 - 18:00 (CET)",
+    "saturday": "Sabato: 10:00 - 14:00 (CET)",
+    "sunday": "Domenica: Chiuso",
+    "clickToCopy": "Clicca per copiare",
+    "clickToCopyEmail": "Clicca per copiare email",
+    "clickToCopyEmergencyNumber": "Clicca per copiare numero di emergenza",
+    "copied": "Copiato!",
+    "howCanWeHelp": "Come possiamo aiutarti?",
+    "technicalSupport": "Supporto Tecnico",
+    "technicalSupportDescription": "Ricevi aiuto per problemi della piattaforma, bug o domande tecniche",
+    "accountBilling": "Account e Fatturazione",
+    "accountBillingDescription": "Domande sul tuo account, fatturazione o abbonamento",
+    "generalInquiries": "Richieste Generali",
+    "generalInquiriesDescription": "Domande generali, feedback o opportunità di partnership",
+    "documentation": "Documentazione",
+    "documentationDescription": "Accedi a guide, documentazione API e risorse di aiuto",
+    "highPriority": "Priorità Alta",
+    "mediumPriority": "Priorità Media",
+    "standardPriority": "Priorità Standard",
+    "selfServicePriority": "Priorità Self-service",
+    "emergencySupport": "Supporto di Emergenza",
+    "emergencyDescription": "Per problemi tecnici urgenti che influenzano le operazioni aziendali:",
+    "emergencyNumber": "+49 123 456 999",
+    "available24x7": "Disponibile 24/7 per problemi critici",
+    "note": "Nota:",
+    "emergencyNote": "Il supporto di emergenza è riservato a interruzioni critiche del sistema o incidenti di sicurezza che impattano gravemente le operazioni aziendali."
   },
   "app": {
     "appName": "Gestione Coworking",
