--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,7 @@
     "settings": "Settings",
     "partnerInfo": "Partner Info",
     "teamMembers": "Team Members",
-    "myBookings": "My Bookings",
+    "myBookings": "Bookings Calendar",
     "partnerMember": "Partner Member",
     "systemAdmin": "System Administrator",
     "partnerAdmin": "Partner Administrator",
@@ -636,7 +636,7 @@
     "type": "Type",
     "location": "Location",
     "quantity": "Quantity",
-    "cost": "Cost",
+    "cost": "Price",
     "currency": "Currency",
     "duration": "Duration",
     "durationDays": "Duration (Days)",
@@ -694,7 +694,16 @@
     "selectLocationFirst": "Select a location first",
     "selectResource": "Select a resource",
     "noResourcesAvailable": "No resources available for this location",
-    "availableQuantity": "Available quantity"
+    "availableQuantity": "Available quantity",
+    "serviceInfo": "Service Info",
+    "serviceTypesInformation": "Service Types Information",
+    "subscriptionInfo": "Subscription Services",
+    "subscriptionDescription": "Recurring payment services with automatic renewal option",
+    "packageInfo": "Package Services", 
+    "packageDescription": "Access tickets that can be used within the expiration date",
+    "serviceInfoModalDescription": "Understanding the different service types available in your coworking space",
+    "subscriptionExample": "Example: Monthly desk access, yearly meeting room subscription",
+    "packageExample": "Example: 10-visit package, day pass bundle"
   },
   "reservations": {
     "title": "Package Reservations",
