--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -9,7 +9,7 @@
     "settings": "Impostazioni",
     "partnerInfo": "Info Partner",
     "teamMembers": "Membri del Team",
-    "myBookings": "Le Mie Prenotazioni",
+    "myBookings": "Calendario Prenotazioni",
     "partnerMember": "Membro Partner",
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
@@ -637,7 +637,7 @@
     "type": "Tipo",
     "location": "Sede",
     "quantity": "Quantità",
-    "cost": "Costo",
+    "cost": "Prezzo",
     "currency": "Valuta",
     "duration": "Durata",
     "durationDays": "Durata (Giorni)",
@@ -695,7 +695,16 @@
     "selectLocationFirst": "Seleziona prima una sede", 
     "selectResource": "Seleziona una risorsa",
     "noResourcesAvailable": "Nessuna risorsa disponibile per questa sede",
-    "availableQuantity": "Quantità disponibile"
+    "availableQuantity": "Quantità disponibile",
+    "serviceInfo": "Info Servizi",
+    "serviceTypesInformation": "Informazioni Tipi di Servizio",
+    "subscriptionInfo": "Servizi Abbonamento",
+    "subscriptionDescription": "servizi a pagamento ricorrente con rinnovo automatico attivabile",
+    "packageInfo": "Servizi Pacchetto",
+    "packageDescription": "ticket di accesso utilizzabili entro la scadenza",
+    "serviceInfoModalDescription": "Comprendi i diversi tipi di servizio disponibili nel tuo spazio di coworking",
+    "subscriptionExample": "Esempio: Accesso mensile scrivania, abbonamento annuale sala riunioni",
+    "packageExample": "Esempio: Pacchetto 10 visite, bundle giornaliero"
   },
   "reservations": {
     "title": "Prenotazioni Pacchetto",
